sql/test/error/error7.exp


select * from t1 having 1.0;
       ^
       |
        ----- ERROR
Error: line 3, characters 8-8:
Invalid type for HAVING clause
